# alchemist

./: CHANGELOG.md  README.md  alchemist.cabal  cabal.project
alchemist/: alchemist.cabal
alchemist-fused-effects/: CHANGELOG.md  README.md  alchemist-fused-effects.cabal
alchemist-fused-effects/app/: Main.hs
alchemist-fused-effects/src/: AlchemistFusedEffects.hs
alchemist-fused-effects/src/Control/Effect/Alchemist/: Error.hs  Lift.hs
alchemist/src/: Alchemist.hs
alchemist/src/Alchemist/: Candidate.hs  Catch.hs  Experiment.hs  IO.hs  Observation.hs
alchemist/src/Alchemist/Internal/: Shuffle.hs  Types.hs
alchemist/test/: Spec.hs
app/: Main.hs
src/: Alchemist.hs
src/Alchemist/: Experiment.hs  IO.hs  Result.hs
src/Alchemist/Internal/: Shuffle.hs  Types.hs
test/: Spec.hs
