cabal-version:       2.4
name:                alchemist-fused-effects
version:             0.0.0.0
synopsis:            A fused-effects interface to the alchemist library.
description:         A fused-effects interface to the alchemist library.
homepage:            https://github.com/patrickt/alchemist-fused-effects
bug-reports:         https://github.com/patrickt/alchemist-fused-effects/issues
license:             MIT
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          Patrick Thomson <patrick.william.thomson@gmail.com>
copyright:           2020 Patrick Thomson
category:            Control
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/patrickt/alchemist-fused-effects.git

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , alchemist
                     , text
                     , fused-effects
                     , fused-effects-exceptions

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Control.Effect.Alchemist.Error
                       Control.Effect.Alchemist.Lift

test-suite alchemist-fused-effects-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       alchemist-fused-effects
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
